--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -8114,6 +8114,7 @@ body.template-color-1 {
   .logo a img {
     transition: 0.3s; 
     width: 100px;
+	  height: 100px;
     
 }
     @media only screen and (max-width: 767px) {
